# dyn-grpc

./: Cargo.toml  README.md
crates/dyn-grpc/: Cargo.toml
crates/dyn-grpc-cli/: Cargo.toml
crates/dyn-grpc-cli/src/: main.rs
crates/dyn-grpc/src/: error.rs  lib.rs  reflection.rs
