[package]
name = "dyn-grpc-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for dynamic gRPC calls using server reflection"
license = "MIT"

[[bin]]
name = "dyn-grpc"
path = "src/main.rs"

[dependencies]
dyn-grpc = { path = "../dyn-grpc" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
prost-reflect = "0.14"
tokio = { version = "1", features = ["full"] }
