[package]
name = "dyn-grpc"
version = "0.1.0"
edition = "2021"
description = "Dynamic gRPC client using server reflection with JSON message building"
license = "MIT"

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["codegen", "transport", "prost"] }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
http = "1"
bytes = "1"
tokio-stream = "0.1"
futures-util = "0.3"
thiserror = "2"
